# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\API\LoginController;
 use App\Http\Controllers\API\ProjectController;
 use App\Http\Controllers\API\TaskController;
 use Illuminate\Http\Request;
@@ -16,16 +17,16 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
+Route::middleware('api')->group(function(){
+    Route::post('/login/store',[LoginController::class,'login']);
+    
+    Route::middleware(['auth','auth:sanctum'])->group(function(){
+        Route::apiResource('projects',ProjectController::class)->except(['create','edit']);
+    });
+        
+});
+
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
 
-// Route::middleware('auth')->group(function(){
-    Route::apiResource('projects',ProjectController::class)->except(['create','edit']);
-// });
-
-// Route::get('/projects',[ProjectController::class,'index']);
-// Route::post('/projects/store',[ProjectController::class,'store']);
-// Route::get('/projects/{project}',[ProjectController::class,'show']);
-// Route::put('/projects/{project}',[ProjectController::class,'update']);
-// Route::delete('/projects/{project}',[ProjectController::class,'destroy']);
